--- a/src/about.html
+++ b/src/about.html
@@ -1,133 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>About - Supro.</title>
-      <link
-         href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-         rel="stylesheet"
-         />
-      <link rel="stylesheet" href="about/style.css" />
-   </head>
-   <body>
-      <h1 class="white-text center black-background">About Us</h1>
-      <nav>
-         <span class="grey-text padded">Home</span>
-         <img src="about/resources/circle.png" alt="circle" class="circle" />
-         <span class="black-text">About Us</>
-      </nav>
-      <main>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About - Supro.</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="about/style.css" />
+  </head>
+  <body>
+    <h1 class="white center black-background">About Us</h1>
+    <nav>
+      <span class="grey padded">Home</span>
+      <img src="about/resources/circle.png" alt="circle" class="circle" />
+      <span class="black">About Us</span>
+    </nav>
+    <main>
       <section class="section1">
         <img src="about/resources/ab1.jpg" alt="About1" class="img1" />
-         <h3 class="orange-text">About us</h3>
-         <h2 class="black-text bold">
-            Supro is the modern luxury shopping destination
-         </h2>
-         <p class="grey-text p1">
-           <span class="line">_____</span>
-            We started in 2006 and haven't stopped smashing it since. A global brand that doesn't sleep, we are 24/7 and always bringing something new with over 100 new products dropping on the monthly, bringing you the latest looks for less.
-         </p>
+        <h3 class="orange caps">About Us</h3>
+        <h2 class="black bold font40px h2s1">
+          Supro is the modern luxury shopping destination
+        </h2>
+        <span class="line grey">_____</span>
+        <p class="grey p1">
+          We started in 2006 and haven't stopped smashing it since. A global
+          brand that doesn't sleep, we are 24/7 and always bringing something
+          new with over 100 new products dropping on the monthly, bringing you
+          the latest looks for less.
+        </p>
       </section>
       <section class="section2">
-         <img src="about/resources/ab2.jpg" alt="About2" class="img2" />
-         <h2 class="black-text italic">
-            Supro recognizes individuality. We see you. We embrace it. We make
-            fashion accessible and fun
-         </h2>
-         <p class="orange-text">Caroline Roifield <br/>
-         <div class="grey-text">Co-Founder</div>
-         </p>
-         <p class="grey-text p2">From over 4 million fans on social and an online magazine, we're the dress you need at the weekend, and the LOL moments you need when you're down.</p>
+        <img src="about/resources/ab2.jpg" alt="About2" class="img2" />
+        <div class="side">
+        <h2 class="black italic ">
+          Supro recognizes individuality. We see you. We embrace it. We make
+          fashion accessible and fun
+        </h2>
+        <div class="orange">Caroline Roifield</div>
+        <div class="grey">Co-Founder</div>
+        <p class="grey p2">
+          From over 4 million fans on social and an online magazine, we're the
+          dress you need at the weekend, and the LOL moments you need when
+          you're down.
+        </p>
+        <p>_____</p>
+      </div>
+      <div class="background italic">
+        66
+        </div>
       </section>
       <div class="parent">
-         <div class="div1">
-            <h2 class="black-text bold">Supro Big Moments</h2>
-            <p class="grey-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est ut id, qui illum, expedita eveniet, voluptatibus aperiam et quia optio ducimus molestiae amet voluptatem perspiciatis doloremque tempore explicabo placeat nihil!</p>
-         </div>
-         <div class="div2">
-            <h3 class="black-text">2006</h3>
-            <p class="grey-text">Supro was born</p>
-         </div>
-         <div class="div3">
-            <h3 class="black-text">2009</h3>
-            <p class="grey-text">We went international, launching in the US.</p>
-         </div>
-         <div class="div4">
-            <h3 class="black-text">2012</h3>
-            <p class="grey-text">We hit 1 mil followers on Facebook Opened Sydney office</p>
-         </div>
-         <div class="div5">
-            <h3 class="black-text">2015</h3>
-            <p class="grey-text">1000+ employees and we launched Supro Premium</p>
-         </div>
+        <div class="div1">
+          <h2 class="black bold">Supro Big Moments</h2>
+          <p class="grey">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est ut id,
+            qui illum, expedita eveniet, voluptatibus aperiam et quia optio
+            ducimus molestiae amet voluptatem perspiciatis doloremque tempore
+            explicabo placeat nihil!
+          </p>
+          <p class="grey">______</p>
+        </div>
+        <div class="div2">
+          <h3 class="black">2006</h3>
+          <p class="grey">Supro was born</p>
+        </div>
+        <div class="div3">
+          <h3 class="black">2009</h3>
+          <p class="grey">We went international, launching in the US.</p>
+        </div>
+        <div class="div4">
+          <h3 class="black">2012</h3>
+          <p class="grey">
+            We hit 1 mil followers on Facebook Opened Sydney office
+          </p>
+        </div>
+        <div class="div5">
+          <h3 class="black">2015</h3>
+          <p class="grey">1000+ employees and we launched Supro Premium</p>
+        </div>
       </div>
+      <section class="container">
       <section class="section4">
-         <div>Work hard, have fun</div>
-         <div>No drama</div>
-         <img src="about/resources/play-button.png" alt="play-button" class="play-button">
+        <div class="bold">Work hard, have fun</div>
+        <div class="font40px bold">No drama</div>
+        <img src="about/resources/play-button.png" alt="play-button" class="play-button" />
       </section>
+    </section>
       <section class="section5">
-         <span class="span1">
-            <p class="black-text">
-               Free Shipping
-            </p>
-            <p class="grey-text">
-               Orders over $100
-            </p>
-         </span>
-         <span class="span2">
-            <p class="black-text">
-               Free returns
-            </p>
-            <p class="grey-text">
-               Within 30 days
-            </p>
-         </span>
-         <span class="span3">
-            <p class="black-text">
-               100% Secure
-            </p>
-            <p class="grey-text">
-               Online Shopping
-            </p>
-         </span>
-         <span class="span4">
-            <p class="black-text">
-               Best Price
-            </p>
-            <p class="grey-text">
-               Guaranteed
-            </p>
-         </span>
+        <span class="span">
+          <p class="black">
+            Free Shipping
+          </p>
+          <p class="grey">
+            Orders over $100
+          </p>
+        </span>
+        <span class="span">
+          <p class="black">
+            Free returns
+          </p>
+          <p class="grey">
+            Within 30 days
+          </p>
+        </span>
+        <span class="span">
+          <p class="black">
+            100% Secure
+          </p>
+          <p class="grey">
+            Online Shopping
+          </p>
+        </span>
+        <span class="span">
+          <p class="black">
+            Best Price
+          </p>
+          <p class="grey">
+            Guaranteed
+          </p>
+        </span>
       </section>
       <section class="section6">
-         <h3 class="black-text center">Using technology to inspire and innovate, we aim to make shopping seamless, wheter online or in store</h3>
-         <p class="left">
-            With over 12 years' heritage in luxury fashion, we deliver to over 170 countries and offer 24/7 advice through MyStylist, our dedicated fashion-conciege team
-         </p>
-         <p class="left">
-            Choose how you want to experience us - online, in our London stores, at No.23, our private-shopping townhouse, or at one of our international events.
-         </p>
+        <h3 class="black center">
+          Using technology to inspire and innovate, we aim to make shopping
+          seamless, wheter online or in store
+        </h3>
+        <p class="left">
+          With over 12 years' heritage in luxury fashion, we deliver to over 170
+          countries and offer 24/7 advice through MyStylist, our dedicated
+          fashion-conciege team
+        </p>
+        <p class="left">
+          Choose how you want to experience us - online, in our London stores,
+          at No.23, our private-shopping townhouse, or at one of our
+          international events.
+        </p>
       </section>
       <section class="section7">
-         <h2 class="black-text center">Leadership Members</h2>
-         <span>
-         <img src="about/resources/member1.jpg" alt="member1" class="member">
-         <img src="about/resources/member3.jpg" alt="member1" class="member">
-         <img src="about/resources/member2.jpg" alt="member1" class="member">
-         </span>
+        <h2 class="black center section-title">Leadership Members</h2>
+        <span>
+          <img src="about/resources/member1.jpg" alt="member1" class="member" />
+          <img src="about/resources/member3.jpg" alt="member1" class="member" />
+          <img src="about/resources/member2.jpg" alt="member1" class="member" />
+        </span>
       </section>
       <section class="section8">
-         <span>
-         <img src="about/resources/brand4.png" alt="brand" class="brand">
-         <img src="about/resources/brand6.png" alt="brand" class="brand">
-         <img src="about/resources/brand5.png" alt="brand" class="brand">
-         <img src="about/resources/brand4.png" alt="brand" class="brand">
-         <img src="about/resources/brand6.png" alt="brand" class="brand">
-         <img src="about/resources/brand2.png" alt="brand" class="brand">
-         </span>
+        <span>
+          <img src="about/resources/brand4.png" alt="brand" class="brand" />
+          <img src="about/resources/brand6.png" alt="brand" class="brand" />
+          <img src="about/resources/brand5.png" alt="brand" class="brand" />
+          <img src="about/resources/brand4.png" alt="brand" class="brand" />
+          <img src="about/resources/brand6.png" alt="brand" class="brand" />
+          <img src="about/resources/brand2.png" alt="brand" class="brand" />
+        </span>
       </section>
     </main>
-   </body>
+  </body>
 </html>
