--- a/src/about.html
+++ b/src/about.html
@@ -35,21 +35,21 @@
       <section class="section2">
         <img src="about/resources/ab2.jpg" alt="About2" class="img2" />
         <div class="side">
-        <h2 class="black italic ">
-          Supro recognizes individuality. We see you. We embrace it. We make
-          fashion accessible and fun
-        </h2>
-        <div class="orange">Caroline Roifield</div>
-        <div class="grey">Co-Founder</div>
-        <p class="grey p2">
-          From over 4 million fans on social and an online magazine, we're the
-          dress you need at the weekend, and the LOL moments you need when
-          you're down.
-        </p>
-        <p>_____</p>
-      </div>
-      <div class="background italic">
-        66
+          <h2 class="black italic">
+            Supro recognizes individuality. We see you. We embrace it. We make
+            fashion accessible and fun
+          </h2>
+          <div class="orange">Caroline Roifield</div>
+          <div class="grey">Co-Founder</div>
+          <p class="grey p2">
+            From over 4 million fans on social and an online magazine, we're the
+            dress you need at the weekend, and the LOL moments you need when
+            you're down.
+          </p>
+          <p>_____</p>
+        </div>
+        <div class="background italic">
+          66
         </div>
       </section>
       <div class="parent">
@@ -83,12 +83,16 @@
         </div>
       </div>
       <section class="container">
-      <section class="section4">
-        <div class="bold">Work hard, have fun</div>
-        <div class="font40px bold">No drama</div>
-        <img src="about/resources/play-button.png" alt="play-button" class="play-button" />
+        <section class="section4">
+          <div class="bold">Work hard, have fun</div>
+          <div class="font40px bold">No drama</div>
+          <img
+            src="about/resources/play-button.png"
+            alt="play-button"
+            class="play-button"
+          />
+        </section>
       </section>
-    </section>
       <section class="section5">
         <span class="span">
           <p class="black">
@@ -128,12 +132,12 @@
           Using technology to inspire and innovate, we aim to make shopping
           seamless, wheter online or in store
         </h3>
-        <p class="left">
+        <p class="left grey">
           With over 12 years' heritage in luxury fashion, we deliver to over 170
           countries and offer 24/7 advice through MyStylist, our dedicated
           fashion-conciege team
         </p>
-        <p class="left">
+        <p class="left grey">
           Choose how you want to experience us - online, in our London stores,
           at No.23, our private-shopping townhouse, or at one of our
           international events.
