--- a/src/about.html
+++ b/src/about.html
@@ -46,7 +46,7 @@
             dress you need at the weekend, and the LOL moments you need when
             you're down.
           </p>
-          <p>_____</p>
+          <p class="grey">_____</p>
         </div>
         <div class="background italic">
           66
@@ -129,8 +129,7 @@
       </section>
       <section class="section6">
         <h3 class="black center">
-          Using technology to inspire and innovate, we aim to make shopping
-          seamless, wheter online or in store
+          Using technology to inspire and innovate, we aim to make shopping seamless, wheter online or in store
         </h3>
         <p class="left grey">
           With over 12 years' heritage in luxury fashion, we deliver to over 170
@@ -144,21 +143,22 @@
         </p>
       </section>
       <section class="section7">
-        <h2 class="black center section-title">Leadership Members</h2>
+        <h2 class="black center section-title font40px">Leadership Members</h2>
         <span>
           <img src="about/resources/member1.jpg" alt="member1" class="member" />
           <img src="about/resources/member3.jpg" alt="member1" class="member" />
           <img src="about/resources/member2.jpg" alt="member1" class="member" />
         </span>
       </section>
+    </main>
       <section class="section8">
         <span>
-          <img src="about/resources/brand4.png" alt="brand" class="brand" />
-          <img src="about/resources/brand6.png" alt="brand" class="brand" />
-          <img src="about/resources/brand5.png" alt="brand" class="brand" />
-          <img src="about/resources/brand4.png" alt="brand" class="brand" />
-          <img src="about/resources/brand6.png" alt="brand" class="brand" />
-          <img src="about/resources/brand2.png" alt="brand" class="brand" />
+          <img src="about/resources/brand4.png" alt="brand" class="brand brand1" />
+          <img src="about/resources/brand6.png" alt="brand" class="brand brand2" />
+          <img src="about/resources/brand5.png" alt="brand" class="brand brand3" />
+          <img src="about/resources/brand4.png" alt="brand" class="brand brand1" />
+          <img src="about/resources/brand6.png" alt="brand" class="brand brand2" />
+          <img src="about/resources/brand2.png" alt="brand" class="brand brand4" />
         </span>
       </section>
     </main>
