--- a/index.html
+++ b/index.html
@@ -119,57 +119,63 @@
     <div class="main__grid">
       <div class="div1">
         <img src="src/shop/resources/prd_03_1.jpg" alt="item" class="item" />
-        <div class="bold">Calvin Klein Logo Sweatpants</div>
-        <div class="prix">$86.00</div>
+        <div class="main__grid--wrapper">
+          <div class="bold">Calvin Klein Logo Sweatpants</div>
+          <div class="prix">$86.00</div>
+        </div>
       </div>
       <div class="div2">
         <img src="src/shop/resources/prd_02_1_2_1.jpg" alt="item" class="item" />
-        <div class="bold">Short Sleeved Hoodie</div>
-        <img src="src/shop/resources/star.png" alt="star" class="star" />
-        <img src="src/shop/resources/star.png" alt="star" class="star" />
-        <img src="src/shop/resources/star.png" alt="star" class="star" />
-        <img src="src/shop/resources/star.png" alt="star" class="star" />
-        <img src="src/shop/resources/star.png" alt="star" class="star" /><br />
-        <div class="prix">$59.00</div>
-        <br />
-        <img src="src/shop/resources/black.png" alt="black" class="color-choice"/>
-        <img src="src/shop/resources/blue.png" alt="blue" class="color-choice" />
+        <div class="main__grid--wrapper">
+          <div class="bold">Short Sleeved Hoodie</div>
+          <img src="src/shop/resources/star.png" alt="star" class="star" />
+          <img src="src/shop/resources/star.png" alt="star" class="star" />
+          <img src="src/shop/resources/star.png" alt="star" class="star" />
+          <img src="src/shop/resources/star.png" alt="star" class="star" />
+          <img src="src/shop/resources/star.png" alt="star" class="star" /><br />
+          <div class="prix">$59.00</div>
+          <br />
+          <img src="src/shop/resources/black.png" alt="black" class="color-choice"/>
+          <img src="src/shop/resources/blue.png" alt="blue" class="color-choice" />
+        </div>
       </div>
       <div class="div3">
         <img src="src/shop/resources/prd_14_1.jpg" alt="item" class="item" />
-        <div class="bold">Woleen Tee</div>
-        <div class="prix">$59.00</div>
+        <div class="main__grid--wrapper">
+          <div class="bold">Woleen Tee</div>
+          <div class="prix">$59.00</div>
+        </div>
       </div>
       <div class="div4">
         <img src="src/shop/resources/prd_17_1.jpg" alt="item" class="item" />
-        <div class="bold">Brown Jacket</div>
-        <span class="line prix">$89.00</span>
-        <span class="nouveau-prix">$80.00</span>
+        <div class="main__grid--wrapper">
+          <div class="bold">Brown Jacket</div>
+          <span class="line prix">$89.00</span>
+          <span class="nouveau-prix">$80.00</span>
+        </div>
       </div>
       <div class="div5">
         <img src="src/shop/resources/prd_12_1_4.jpg" alt="item" class="item" />
-        <div class="bold">Pink Leather Watch</div>
-        <div class="prix">$95.99</div>
+        <div class="main__grid--wrapper">
+          <div class="bold">Pink Leather Watch</div>
+          <div class="prix">$95.99</div>
         <br />
         <img
           src="src/shop/resources/letter-m.png"
           alt="size-m"
           class="size-choice"
         />
+        </div>
       </div>
       <div class="div6">
         <img src="src/shop/resources/prd_01_1_1_1.jpg" alt="item" class="item" />
-        <div class="bold">Cuffed Beanie</div>
-        <div class="prix">$68.00</div>
+        <div class="main__grid--wrapper">
+          <div class="bold">Cuffed Beanie</div>
+          <div class="prix">$68.00</div>
+        </div>
         <br />
       </div>
     </div>
-
-
-
-
-
-
 
     <div class="main__banner--bottom">
       <div class="main__banner__bottom--container deals">
@@ -190,8 +196,59 @@
     </div>
 
 
+
+
+
+
+
+
+    <section class="news">
+      <h1>Latest News</h1>
+      <p>Our articles about fashion ideas & product</p>
+      <a href="#">SEE MORE NEWS</a>
+      <!-- <figure>
+           <div>
+            <i class="lfa fa-play-circle-o"></i>
+          </div>
+      </figure> -->
+      <div>
+        <img src="src/homepage/resources/latest2_1.jpg" alt="">
+          <div class="label">
+              <b>The Best Red Carpet Looks From the NAACP Image Awards</b>
+              <P>CHISTINE - Jan 30,2019</P>
+              <div class="autor">
+          </div>
+      </div>
+      <div>
+        <img src="src/homepage/resources/blog9.jpg" alt="">
+          <div class="artname gal">
+            <b>How Bella Hadid dresses down a ladylike coat</b>
+            <p>JOHN PETER - Jan 30,2019</p>
+          </div>
+      </div>
+      <div>
+       <img src="src/homepage/resources/blog8.jpg" alt="">
+          <div>
+            <b>The best street style from Berlin Fashion Week Fall 2018</b>
+            <p>ANNA - Jan 30,2019</p>
+        </div>
+      </div>
+  </section>
+
+    <section id="newsletter">
+      <div class="container">
+        <h2>Keep connected</h2>
+        <p>Get updates by subscribe out weekly newsletter</p>
+        <form>
+          <i class="far fa-envelope" id="enveloppe"></i>
+          <input type="email" placeholder="Enter Email...">
+          <button type="submit" class="button_1">Subscribe</button>
+        </form>
+      </div>
+    </section>
   </main>
 
+  <img src="src/homepage/resources/bannerb.png" id="bannerb" class="nonephone">
 
   <footer class="footer">
 
