amost done css mobile store page

--- a/pruduct.html
+++ b/pruduct.html
@@ -19,7 +19,7 @@
 
             <section>
                 <div class="home"><span>home</span> . glitter decorate shoes adasdi</div>
-            
+
                 <div class="grid-container">
                     <div class="image">
                         <div class="imageG">
@@ -86,18 +86,18 @@
                             </div>
                             <div class="buy">
                                 <button>buy now</button>
-                            </div class="category">
-                            <div>
-                                <p>category :<em></em></p>
+                            </div>
+                            <div class="category">
+                                <p> <b>category :</b><span> bags, fashion </span></p>
                             </div>
                             <div class="tags">
-                                <p>tags: <em></em></p>
+                                <p><b>tags:</b><span> clothing, fashion </span></p>
                             </div>
 
                         </div>
 
                         <div class="media-icons">
-                            <p>media icons</p>
+
                             <ul>
                                 <li class="facebook">
                                     <i class="fab fa-facebook-f"></i>
