--- a/index.html
+++ b/index.html
@@ -112,11 +112,20 @@
 
 
 
-
-
-
+    <div class="newArrival">
+      <h2>New Arrival</h2>
+      <p>Browse the huge variety of our product</p>
+      <ul>
+        <li>All Product</li>
+        <li>Clothing</li>
+        <li>Bags</li>
+        <li>Shoes</li>
+        <li>Wallets & Cases</li>
+      </ul>
+    </div> 
 
     <div class="main__grid">
+
       <div class="div1">
         <img src="src/shop/resources/prd_03_1.jpg" alt="item" class="item" />
         <div class="main__grid--wrapper">
@@ -203,37 +212,43 @@
 
 
     <section class="news">
-      <h1>Latest News</h1>
-      <p>Our articles about fashion ideas & product</p>
-      <a href="#">SEE MORE NEWS</a>
+      <div class="latestNews">
+        <h1>Latest News</h1>
+        <p>Our articles about fashion ideas & product</p>
+        <a href="#">SEE MORE NEWS</a>
+      </div>
       <!-- <figure>
            <div>
             <i class="lfa fa-play-circle-o"></i>
           </div>
       </figure> -->
-      <div>
-        <img src="src/homepage/resources/latest2_1.jpg" alt="">
-          <div class="label">
+      <div class="news__article left">
+        <img src="src/homepage/resources/blog10.jpg" alt="">
+            <div>
               <b>The Best Red Carpet Looks From the NAACP Image Awards</b>
               <P>CHISTINE - Jan 30,2019</P>
-              <div class="autor">
-          </div>
+            </div>
       </div>
-      <div>
+      <div class="news__article center">
         <img src="src/homepage/resources/blog9.jpg" alt="">
-          <div class="artname gal">
+          <div>
             <b>How Bella Hadid dresses down a ladylike coat</b>
             <p>JOHN PETER - Jan 30,2019</p>
           </div>
       </div>
-      <div>
+      <div class="news__article right">
        <img src="src/homepage/resources/blog8.jpg" alt="">
           <div>
             <b>The best street style from Berlin Fashion Week Fall 2018</b>
             <p>ANNA - Jan 30,2019</p>
-        </div>
+          </div>
       </div>
   </section>
+
+
+
+
+
 
     <section id="newsletter">
       <div class="container">
@@ -246,6 +261,7 @@
         </form>
       </div>
     </section>
+    <div class="clear"></div>
   </main>
 
   <img src="src/homepage/resources/bannerb.png" id="bannerb" class="nonephone">
