--- a/pruduct.html
+++ b/pruduct.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1" />
-  <link rel="stylesheet" href="src/css/style.css">
+  <link rel="stylesheet" href="src/css/product.css">
   <link rel="stylesheet" href="src/css/footer-header.css">
 
   <title>Single product</title>
