--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <li class="header__item nav-item"><a href="#">Home</a></li>
         <li class="header__item nav-item"><a href="./shop.html">Shop</a></li>
         <li class="header__item nav-item"><a href="./pruduct.html">Product</a></li>
-        <li class="header__item nav-item"><a href="#">Pages</a></li>
-        <li class="header__item nav-item"><a href="#">Blog</a></li>
-        <li class="header__item nav-item"><a href="#">Contact</a></li>
+        <li class="header__item nav-item"><a href="./pages.html" target="_blank">Pages</a></li>
+        <li class="header__item nav-item"><a href="./about.html">Blog</a></li>
+        <li class="header__item nav-item"><a href="./stores.html">Contact</a></li>
       </ul>
     </nav>
 
@@ -48,9 +48,9 @@
                   <li><a href="#">Home</a></li>
                   <li><a href="./shop.html">Shop</a></li>
                   <li><a href="./pruduct.html">Product</a></li>
-                  <li><a href="#">Pages</a></li>
-                  <li><a href="#">Blog</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a href="./pages.html">Pages</a></li>
+                  <li><a href="./about.html">Blog</a></li>
+                  <li><a href="./stores.html">Contact</a></li>
                   <div class="info">
                     <h1>Contact Us</h1>
                     <p>69 Halsey St, Ny 10002, New York,<br>United States support.center@unero.co<br>(0091)8547632521
@@ -199,7 +199,7 @@
             <div class="counter">
               <img src="src/homepage/resources/countdown.png" alt="">
             </div>
-          <a href="#">SHOP NOW</a>
+          <a href="./shop.html">SHOP NOW</a>
         </div>
       </div>
     </div>
