--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
   <header class="header">
 
-    <a href="#" class="header__logo"><img src="src/img/logo.png" alt=""></a>
+    <a href="#" class="header__logo"><img src="src/img/logo.png" alt="domain logo"></a>
 
-    <nav class="header__nav collapse navbar-collapse" id="">
+    <nav class="header__nav collapse navbar-collapse">
       <ul class="header__list navbar-nav mr-auto">
         <li class="header__item nav-item"><a href="#">Home</a></li>
         <li class="header__item nav-item"><a href="./shop.html">Shop</a></li>
@@ -188,7 +188,7 @@
 
     <div class="main__banner--bottom">
       <div class="main__banner__bottom--container deals">
-        <img src="src//resources/deals_image.jpg" alt="">
+        <img src="src//resources/deals_image.jpg" alt="three bags">
         <div class="main__banner__bottom--container--wrapper">
           <p>Deal of the day</p>
           <h2>Hobo Shopper Bag</h2>
@@ -197,7 +197,7 @@
              <span>Save 50%</span>
              </div>
             <div class="counter">
-              <img src="src/homepage/resources/countdown.png" alt="">
+              <img src="src/homepage/resources/countdown.png" alt="countdown">
             </div>
           <a href="./shop.html">SHOP NOW</a>
         </div>
@@ -216,21 +216,21 @@
           </div>
       </figure> -->
       <div class="news__article left">
-        <img src="src/homepage/resources/blog10.jpg" alt="">
+        <img src="src/homepage/resources/blog10.jpg" alt="info image">
             <div>
               <b>The Best Red Carpet Looks From the NAACP Image Awards</b>
               <P>CHISTINE - Jan 30,2019</P>
             </div>
       </div>
       <div class="news__article center">
-        <img src="src/homepage/resources/blog9.jpg" alt="">
+        <img src="src/homepage/resources/blog9.jpg" alt="info image">
           <div>
             <b>How Bella Hadid dresses down a ladylike coat</b>
             <p>JOHN PETER - Jan 30,2019</p>
           </div>
       </div>
       <div class="news__article right">
-       <img src="src/homepage/resources/blog8.jpg" alt="">
+       <img src="src/homepage/resources/blog8.jpg" alt="info image">
           <div>
             <b>The best street style from Berlin Fashion Week Fall 2018</b>
             <p>ANNA - Jan 30,2019</p>
@@ -259,7 +259,7 @@
     <div class="up footer__listwrap">
       <div class="footer__list footer__contact nonephone">
         <ul>
-          <img src="src/img/logo.png" alt="">
+          <img src="src/img/logo.png" alt="domain logo">
           <li>
             <p><i class="fas fa-map-marker-alt"></i> 184 Main Rd E, St Albans<br>VIC 3021, Australia</p>
           </li>
