--- a/pages.html
+++ b/pages.html
@@ -9,7 +9,7 @@
 </head>
 <header class="header">
 
-    <a href="./index.html" class="header__logo"><img src="src/img/logo.png" alt=""></a>
+    <a href="./index.html" class="header__logo"><img src="src/img/logo.png" alt="domain logo"></a>
   
     <nav class="header__nav collapse navbar-collapse" id="">
       <ul class="header__list navbar-nav mr-auto">
@@ -61,6 +61,6 @@
     </aside>
   </header>
 <body>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/BiG7eum9YQM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/BiG7eum9YQM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="youtube"></iframe>
 </body>
 </html>
