--- a/shop.html
+++ b/shop.html
@@ -15,7 +15,7 @@
     <!--Scott's header starts here-->
     <header class="header">
 
-      <a href="./index.html" class="header__logo"><img src="src/img/logo.png" alt=""></a>
+      <a href="./index.html" class="header__logo"><img src="src/img/logo.png" alt="domain logo"></a>
     
       <nav class="header__nav collapse navbar-collapse" id="">
         <ul class="header__list navbar-nav mr-auto">
@@ -247,7 +247,7 @@
       <div class="up footer__listwrap">
       <div class="footer__list footer__contact nonephone">
         <ul>
-        <img src="src/img/logo.png" alt="">
+        <img src="src/img/logo.png" alt="domain logo">
         <li>
           <p><i class="fas fa-map-marker-alt"></i> 184 Main Rd E, St Albans<br>VIC 3021, Australia</p>
         </li>
