--- a/stores.html
+++ b/stores.html
@@ -14,7 +14,7 @@
 
   
 
-        <a href="./index.html" class="header__logo"><img src="src/img/logo.png" alt=""></a>
+        <a href="./index.html" class="header__logo"><img src="src/img/logo.png" alt="domain logo"></a>
 
         <nav class="header__nav collapse navbar-collapse" id="">
             <ul class="header__list navbar-nav mr-auto">
@@ -258,7 +258,7 @@
         <div class="up footer__listwrap">
             <div class="footer__list footer__contact nonephone">
                 <ul>
-                    <img src="src/img/logo.png" alt="">
+                    <img src="src/img/logo.png" alt="domain logo">
                     <li>
                         <p><i class="fas fa-map-marker-alt"></i> 184 Main Rd E, St Albans<br>VIC 3021, Australia</p>
                     </li>
