--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
                   <li><a href="./pages.html">Pages</a></li>
                   <li><a href="./about.html">Blog</a></li>
                   <li><a href="./stores.html">Contact</a></li>
-                  <div class="info">
-                    <h1>Contact Us</h1>
-                    <p>69 Halsey St, Ny 10002, New York,<br>United States support.center@unero.co<br>(0091)8547632521
-                    </p>
-                  </div>
                 </ul>
+                <div class="info">
+                  <h1>Contact Us</h1>
+                  <p>69 Halsey St, Ny 10002, New York,<br>United States support.center@unero.co<br>(0091)8547632521
+                  </p>
+                </div>
               </div>
             </div>
           </div>
@@ -69,7 +69,7 @@
   <main class="main">
     <div class="main__banner">
       <div class ="main__banner__top--container">
-        <div class="topicon" alt="socials">
+        <div class="topicon">
           <ul>
             <li><a href="#"><i class="fab fa-facebook-f fa-lg"></i></a></li>
             <li><a href="#"><i class="fab fa-twitter fa-lg"></i></a></li>
@@ -188,7 +188,6 @@
 
     <div class="main__banner--bottom">
       <div class="main__banner__bottom--container deals">
-        <img src="src//resources/deals_image.jpg" alt="three bags">
         <div class="main__banner__bottom--container--wrapper">
           <p>Deal of the day</p>
           <h2>Hobo Shopper Bag</h2>
@@ -252,7 +251,7 @@
     <div class="clear"></div>
   </main>
 
-  <img src="src/homepage/resources/bannerb.png" id="bannerb" class="nonephone">
+  <img src="src/homepage/resources/bannerb.png" id="bannerb" class="nonephone" alt="banner follow us">
 
   <footer class="footer">
 
@@ -329,7 +328,7 @@
             class="nonedesk">Terme of Use</a></p>
       </div>
 
-      <div class="nonephone" alt="socials">
+      <div class="nonephone">
         <ul>
           <li></li>
           <li><a href="#"><i class="fab fa-facebook-f fa-lg"></i></a></li>
@@ -351,7 +350,6 @@
       </div>
     </div>
   </footer>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
 </body>
-<script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
-
 </html>
