--- a/shop.html
+++ b/shop.html
@@ -12,12 +12,11 @@
   </head>
 
   <body>
-    <!--Scott's header starts here-->
     <header class="header">
 
       <a href="./index.html" class="header__logo"><img src="src/img/logo.png" alt="domain logo"></a>
     
-      <nav class="header__nav collapse navbar-collapse" id="">
+      <nav class="header__nav collapse navbar-collapse">
         <ul class="header__list navbar-nav mr-auto">
           <li class="header__item nav-item"><a href="./index.html">Home</a></li>
           <li class="header__item nav-item"><a href="./shop.html">Shop</a></li>
@@ -229,10 +228,10 @@
           <input type="checkbox" />
           <span class="checkmark"></span>
         </div>
-        <span class="compare">
+        <div class="compare">
           <h3>Compare products</h3>
           <span class="grey-text">You have no items to compare.</span>
-        </span>
+        </div>
       </aside>
     </section>
     <section class="page-number">
@@ -320,9 +319,8 @@
           class="nonedesk">Terme of Use</a></p>
       </div>
     
-      <div class="nonephone" alt="socials">
+      <div class="nonephone">
         <ul>
-        <li></li>
         <li><a href="#"><i class="fab fa-facebook-f fa-lg"></i></a></li>
         <li><a href="#"><i class="fab fa-twitter fa-lg"></i></a></li>
         <li><a href="#"><i class="fab fa-google-plus-g fa-lg"></i></a></li>
@@ -342,7 +340,6 @@
       </div>
       </div>
     </footer>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
   </body>
-  <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
-
 </html>
